# openclaw-studiomod

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  eslint.config.mjs  instrumentation-client.ts  logs.txt  next.config.ts  package-lock.json  package.json  patch_nav.js  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
cli/: index.js
cli/commands/: connect.js  import-env.js  services.js  setup.js  status.js
cli/lib/: api-client.js  prompts.js
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.svelte  app.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  ROADMAP-PERSONA-REDESIGN.md  ROADMAP.md  ui-guide.md
messages/: en.json  fr.json
mobile/: capacitor.config.ts  package-lock.json  package.json
mobile/www/: index.html
nginx/: default.conf
public/: manifest.json
public/ai-manager/: index.html
public/novnc/: vnc_lite.html
scripts/: fix-imports.py  init-ssl.sh  sync-upstream.sh  wrap-routes.mjs
server/: access-gate.js  cli-detector.js  credential-vault.js  env-importer.js  event-broadcaster.js  gateway-proxy.js  https-proxy.js  index.js  mobile-token-store.js  provider-validators.js  server-gateway-client.js  studio-settings.js  tunnel-discovery.js  ws-proxy.js
src/: instrumentation.ts  middleware.ts  proxy.ts
src/__tests__/: agentUiPrefs.test.ts  event-broadcaster.test.ts  (+1 more)
tests/: setup.ts
(+615 files in other folders)
