[package]
name = "openclaw-studio-desktop"
version = "1.0.0"
edition = "2021"

[lib]
name = "openclaw_studio_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "openclaw-studio-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", features = ["blocking"] }
uuid = { version = "1", features = ["v4"] }
